stop horizontal scrollbar from appearing when selecting another ranking

--- a/client/stylesheets/app_pages/_election_overview.scss
+++ b/client/stylesheets/app_pages/_election_overview.scss
@@ -3,7 +3,7 @@
     padding: 0;
     margin: 0;
     clear: both;
-    overflow-y: hidden;
+    overflow: hidden;
 
     .guestWelcome {
       .right {
