--- a/client/stylesheets/hyperarchy.css
+++ b/client/stylesheets/hyperarchy.css
@@ -1480,7 +1480,7 @@ body.legal {
   padding: 0;
   margin: 0;
   clear: both;
-  overflow-y: hidden; }
+  overflow: hidden; }
   #app #electionOverview .guestWelcome .right {
     padding-top: 10px; }
   #app #electionOverview .headerContainer {
